<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="MissingConstraints">

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:text="@string/app_name"
            android:textSize="@dimen/margin_16" />
        <View
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_block"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:text="@string/block"
            android:textSize="@dimen/margin_16" />
        <View
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_cancle"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:text="@string/cancel"
            android:textSize="@dimen/margin_16" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>