<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bootstrap_brand_primary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/iv_back"
            android:text="Calendar event"
            android:textColor="#fff"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="3dp"
                android:layout_marginRight="@dimen/margin_40"
                android:layout_marginLeft="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_20"
                card_view:cardUseCompatPadding="true">


                <TextView
                    android:id="@+id/editText_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/calender"
                    android:gravity="center"
                    android:hint="Date"
                    android:inputType="textMultiLine"
                    android:paddingLeft="@dimen/margin_20"
                    android:paddingTop="@dimen/margin_5"
                    android:paddingRight="@dimen/margin_10"
                    android:paddingBottom="@dimen/margin_5"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_20"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="3dp"
                android:layout_marginRight="@dimen/margin_40"
                android:layout_marginLeft="@dimen/margin_40"
                card_view:cardUseCompatPadding="true">


                <EditText
                    android:id="@+id/editText_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center_horizontal"
                    android:hint="@string/title"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_40"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_40"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/font_20">

                    <TextView
                        android:id="@+id/tv_holiday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center"
                        android:textSize="@dimen/margin_20"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginTop="@dimen/font_20"
                        android:gravity="center_horizontal"
                        android:text="@string/holiday"
                        android:textColor="@color/colorPrimary" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_holiday">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radioYes"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:checked="true"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/yes"
                            android:textSize="@dimen/font_16" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/radioNo"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:checked="false"
                            android:text="@string/no"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/font_16" />
                    </RadioGroup>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/ebook"
            android:gravity="center"
            android:text="Submit"
            android:textColor="#fff"
            android:textSize="16dp" />
    </RelativeLayout>


</LinearLayout>
