<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colord91"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/iv_back"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageview_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="@dimen/margin_10"
            android:src="@drawable/ic_add"
            android:visibility="gone" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/reli"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_network"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/nointerrnet" />

        <Button
            android:id="@+id/btnretry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/blue_txt"
            android:text="Retry"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/editText_date"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:gravity="center_horizontal"
                android:hint="Date"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/imageView_date"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint="Start Date"
                android:src="@drawable/calender"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="Search"
                android:textColor="#fff"
                android:textSize="15dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="left|center_vertical"
                android:gravity="left"
                android:padding="@dimen/margin_15"
                android:text="Select All"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_14"
                android:textStyle="normal"
                android:visibility="gone" />


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_below="@+id/tv_select_all"
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            <TextView
                android:id="@+id/tv_done_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@color/colorPrimary"
                android:paddingLeft="@dimen/margin_10"
                android:paddingTop="@dimen/margin_5"
                android:paddingRight="@dimen/margin_10"
                android:paddingBottom="@dimen/margin_5"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16"
                android:visibility="gone" />
        </RelativeLayout>


        <com.muravtech.meri_siksha.utils.CustomTextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data_found"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/margin_30"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>